@@ -119,4 +119,8 @@ public class JoinPair {
     public void joinType(JoinType joinType) {
         this.joinType = joinType;
     }
+
+    public boolean containsRelation(QualifiedName relation) {
+        return this.left.equals(relation) ||  this.right.equals(relation);
+    }
 }
