@@ -36,6 +36,13 @@ Changes
 Fixes
 =====
 
+ - Fixed an issue with algorithm that tries to reorder the joined tables using
+   the optimum ordering. The issue caused an exception to be thrown when join
+   conditions contain table(s) which are not part of the adjacent joined tables.
+   E.g.::
+
+    SELECT * FROM t1 JOIN t2 JOIN t3 JOIN t4 ON t4.id = t2.id
+
  - Fixed an issue that could cause ``sys.operations`` entries to remain even
    after the operation has finished.
 
